--- a/src/pages/article.html
+++ b/src/pages/article.html
@@ -78,7 +78,7 @@
                             </ul>
                         </div>
                     </div>
-                    <select name="city" id="city">
+                    <select name="city" id="city-select">
                         <option value="Moscow">Москва</option>
                         <option value="Saint-Petersburg">Санкт-Петербург</option>
                         <option value="Yekaterinburg">Екатеринбург</option>
@@ -116,15 +116,10 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <p class="visually-hidden">Открыть бургер меню</p>
+                        <span class="visually-hidden">Открыть бургер меню</span>
                     </button>
                     <a href="index.html" class="second-row__main-link">
-                        <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
-                                class="main-link__logo" width="261" height="42" media="(min-width: 760px)">
-                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                                width="149" height="24">
-                        </picture>
+                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo">
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -322,8 +317,8 @@
                         <div class="about-us-slider__item">
                             <div class="about-us-slider__decorative">
                                 <picture>
-                                    <source srcset="./assets/img/about-us/slider.webp" alt="Офис компании." width="568"
-                                        height="404" media="(min-width: 744px)">
+                                    <source srcset="./assets/img/about-us/slider.webp" width="568" height="404"
+                                        media="(min-width: 744px)">
                                     <img src="./assets/img/about-us/slider-mob.webp" alt="Офис компании." width="344"
                                         height="245">
                                 </picture>
@@ -360,7 +355,7 @@
                                 <div class="about-us-slider__item">
                                     <div class="about-us-slider__decorative">
                                         <img class="about-us__director-img" src="./assets/img/about-us/director.webp"
-                                            alt="Основатель компании." width="317" height="424px">
+                                            alt="Основатель компании." width="317" height="424">
                                     </div>
                                     <div class="about-us-slider__text">
                                         <span class="about-us-slider__name">Name Surname</span>
@@ -704,7 +699,7 @@
                                     d="M19.5 20C21.982 20 24 17.98 24 15.5V12C24 5.382 18.618 0 12 0C5.382 0 0 5.382 0 12C0 18.618 5.382 24 12 24C12.828 24 13.5 23.328 13.5 22.5C13.5 21.672 12.828 21 12 21C7.038 21 3 16.962 3 12C3 7.03799 7.038 3 12 3C16.962 3 21 7.03799 21 12V15.5C21 16.326 20.328 17 19.5 17C18.672 17 18 16.326 18 15.5V12C18 8.69199 15.308 6 12 6C8.692 6 6 8.69199 6 12C6 15.308 8.692 18 12 18C13.212 18 14.336 17.632 15.28 17.014C15.906 18.748 17.552 20 19.5 20ZM11.9531 15C13.5841 15 14.9062 13.6359 14.9062 11.9531C14.9062 10.2704 13.5841 8.90625 11.9531 8.90625C10.3222 8.90625 9 10.2704 9 11.9531C9 13.6359 10.3222 15 11.9531 15Z" />
                             </g>
                             <defs>
-                                <clipPath id="clip0_3546_8953">
+                                <clipPath id="clip0_3546_8954">
                                     <rect width="24" height="24" fill="white" />
                                 </clipPath>
                             </defs>
@@ -1213,22 +1208,6 @@
             </div>
         </footer>
     </div>
-
-    <!-- <script>
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
-
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
-    </script> -->
     <div class="decorative decorative__right decorative__right--favorites"></div>
     <div class="decorative decorative__left decorative__left--favorites"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
