--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -109,15 +109,10 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <p class="visually-hidden">Открыть бургер меню</p>
+                        <span class="visually-hidden">Открыть бургер меню</span>
                     </button>
                     <a href="index.html" class="second-row__main-link">
-                        <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
-                                class="main-link__logo" width="261" height="42" media="(min-width: 744px)">
-                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                                width="149" height="24">
-                        </picture>
+                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo">
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -315,21 +310,20 @@
                             <a href="#" class="product__more">Подробнее</a>
                         </div>
                         <picture>
-                            <source srcset="./assets/img/product-preview.webp" alt="Товар."
-                                class="product__img--preview" width="261" height="212" media="(min-width: 1700px)">
-                            <source srcset="./assets/img/product-preview-tablet.webp" alt="Товар."
-                                class="product__img--preview" width="251" height="212" media="(min-width: 744px)">
+                            <source srcset="./assets/img/product-preview.webp" class="product__img--preview" width="261"
+                                height="212" media="(min-width: 1700px)">
+                            <source srcset="./assets/img/product-preview-tablet.webp" class="product__img--preview"
+                                width="251" height="212" media="(min-width: 744px)">
                             <img src="./assets/img/product-preview-mob.webp" alt="Товар." class="product__img--preview"
                                 width="147" height="124">
                         </picture>
                     </div>
                     <div class="product__decorative-block">
                         <picture>
-                            <source srcset="./assets/img/product-decorative.webp" alt="Пример использования товара."
-                                class="product__img--decorative" media="(min-width: 1700px)">
+                            <source srcset="./assets/img/product-decorative.webp" class="product__img--decorative"
+                                media="(min-width: 1700px)">
                             <source srcset="./assets/img/product-decorative-tablet.webp"
-                                alt="Пример использования товара." class="product__img--decorative"
-                                media="(min-width: 744px)">
+                                class="product__img--decorative" media="(min-width: 744px)">
                             <img src="./assets/img/product-decorative-mob.webp" alt="Пример использования товара."
                                 class="product__img--decorative">
                         </picture>
@@ -403,12 +397,12 @@
 
             <!-- каталог товаров -->
             <section class="main-catalog">
-                <h1 class="section__title main-catalog__title">Каталог товаров</h1>
+                <h2 class="section__title main-catalog__title">Каталог товаров</h2>
                 <ul class="main-catalog__list">
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/филлеры.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/филлеры.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/филлеры-mob.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -418,8 +412,8 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/биоревитализация.webp" alt="Товар."
-                                    class="main-catalog__img" media="(min-width: 744px)">
+                                <source srcset="./assets/img/биоревитализация.webp" class="main-catalog__img"
+                                    media="(min-width: 744px)">
                                 <img src="./assets/img/биоревитализация-mob.webp" alt="Товар."
                                     class="main-catalog__img">
                             </picture>
@@ -429,7 +423,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/биопрепаранты.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/биопрепаранты.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/биопрепаранты-mob.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -439,7 +433,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/пилинги.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/пилинги.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/пилинги-mob.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -449,7 +443,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/уход-за-лицом.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/уход-за-лицом.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/уход-за-лицом.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -459,7 +453,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/уход-за-телом.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/уход-за-телом.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/уход-за-телом.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -469,7 +463,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/инъекции.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/инъекции.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/инъекции.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -479,7 +473,7 @@
                     <li class="main-catalog__item">
                         <a href="category.html" class="main-catalog__preview">
                             <picture>
-                                <source srcset="./assets/img/загар.webp" alt="Товар." class="main-catalog__img"
+                                <source srcset="./assets/img/загар.webp" class="main-catalog__img"
                                     media="(min-width: 744px)">
                                 <img src="./assets/img/загар.webp" alt="Товар." class="main-catalog__img">
                             </picture>
@@ -1207,9 +1201,8 @@
                                     <a href="#" class="product__more">Подробнее</a>
                                 </div>
                                 <picture>
-                                    <source srcset="./assets/img/product-preview.webp" alt="Товар."
-                                        class="product__img--preview" width="261" height="212"
-                                        media="(min-width: 744px)">
+                                    <source srcset="./assets/img/product-preview.webp" class="product__img--preview"
+                                        width="261" height="212" media="(min-width: 744px)">
                                     <img src="./assets/img/product-preview-mob.webp" alt="Товар."
                                         class="product__img--preview" width="147" height="124">
                                 </picture>
@@ -1217,8 +1210,7 @@
                             <div class="product__decorative-block">
                                 <picture>
                                     <source srcset="./assets/img/product-decorative.webp"
-                                        alt="Пример использования товара." class="product__img--decorative"
-                                        media="(min-width: 744px)">
+                                        class="product__img--decorative" media="(min-width: 744px)">
                                     <img src="./assets/img/product-decorative-mob.webp"
                                         alt="Пример использования товара." class="product__img--decorative">
                                 </picture>
@@ -1510,7 +1502,7 @@
                                     d="M19.5 20C21.982 20 24 17.98 24 15.5V12C24 5.382 18.618 0 12 0C5.382 0 0 5.382 0 12C0 18.618 5.382 24 12 24C12.828 24 13.5 23.328 13.5 22.5C13.5 21.672 12.828 21 12 21C7.038 21 3 16.962 3 12C3 7.03799 7.038 3 12 3C16.962 3 21 7.03799 21 12V15.5C21 16.326 20.328 17 19.5 17C18.672 17 18 16.326 18 15.5V12C18 8.69199 15.308 6 12 6C8.692 6 6 8.69199 6 12C6 15.308 8.692 18 12 18C13.212 18 14.336 17.632 15.28 17.014C15.906 18.748 17.552 20 19.5 20ZM11.9531 15C13.5841 15 14.9062 13.6359 14.9062 11.9531C14.9062 10.2704 13.5841 8.90625 11.9531 8.90625C10.3222 8.90625 9 10.2704 9 11.9531C9 13.6359 10.3222 15 11.9531 15Z" />
                             </g>
                             <defs>
-                                <clipPath id="clip0_3546_8953">
+                                <clipPath id="clip0_3546_8954">
                                     <rect width="24" height="24" fill="white" />
                                 </clipPath>
                             </defs>
@@ -2102,7 +2094,7 @@
                             БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                         </a>
                         <div class="products__count">
-                            <input class="products-count__input" type="number" name="product-count" id="product-count"
+                            <input class="products-count__input" type="number" name="product-count"
                                 value="1" min="1">
                             <div class="products-count__btns">
                                 <button type="button" class="products-count__btn products-count__btn--plus">
@@ -2155,7 +2147,7 @@
                             БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                         </a>
                         <div class="products__count">
-                            <input class="products-count__input" type="number" name="product-count" id="product-count"
+                            <input class="products-count__input" type="number" name="product-count"
                                 value="1" min="1">
                             <div class="products-count__btns">
                                 <button type="button" class="products-count__btn products-count__btn--plus">
@@ -2178,7 +2170,7 @@
                             БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                         </a>
                         <div class="products__count">
-                            <input class="products-count__input" type="number" name="product-count" id="product-count"
+                            <input class="products-count__input" type="number" name="product-count"
                                 value="1" min="1">
                             <div class="products-count__btns">
                                 <button type="button" class="products-count__btn products-count__btn--plus">
@@ -2201,7 +2193,7 @@
                             БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                         </a>
                         <div class="products__count">
-                            <input class="products-count__input" type="number" name="product-count" id="product-count"
+                            <input class="products-count__input" type="number" name="product-count"
                                 value="1" min="1">
                             <div class="products-count__btns">
                                 <button type="button" class="products-count__btn products-count__btn--plus">
@@ -2264,40 +2256,6 @@
             document.querySelector('.header__row--third').classList.toggle('header__row--third--active');
         });
     </script>
-    <!-- <script>
-        const createModal = (triggersSelector, modalSelector, closeSelector) => {
-            document.querySelectorAll(triggersSelector).forEach(trigger => {
-                trigger.addEventListener('click', (evt) => {
-                    evt.preventDefault();
-                    document.querySelector(modalSelector).style.display = 'flex';
-                });
-            });
-
-            document.querySelector(closeSelector).addEventListener('click', () => {
-                document.querySelector(modalSelector).style.display = 'none';
-            });
-        };
-
-        createModal('.product__more', '.modal--call', '.modal--call .modal__close');
-        createModal('#partner', '.modal--partner', '.modal--partner .modal__close');
-        createModal('.main-categories__card__buy', '.modal--1click', '.modal--1click .modal__close');
-        createModal('.user-navigation__link--cart', '.modal--basket', '.modal--basket .modal__close');
-        createModal('#vacancy', '.modal--vacancy', '.modal--vacancy .modal__close');
-
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
-
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
-    </script> -->
 
     <div class="decorative decorative__right decorative__right--main-top"></div>
     <div class="decorative decorative__left decorative__left--main-top"></div>
