--- a/src/pages/log-in.html
+++ b/src/pages/log-in.html
@@ -78,7 +78,7 @@
                             </ul>
                         </div>
                     </div>
-                    <select name="city" id="city">
+                    <select name="city" id="city-select">
                         <option value="Moscow">Москва</option>
                         <option value="Saint-Petersburg">Санкт-Петербург</option>
                         <option value="Yekaterinburg">Екатеринбург</option>
@@ -115,21 +115,16 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <p class="visually-hidden">Открыть бургер меню</p>
+                        <span class="visually-hidden">Открыть бургер меню</span>
                     </button>
                     <a href="index.html" class="second-row__main-link">
-                        <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42" media="(min-width: 760px)">
-                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="149" height="24">
-                           </picture>
+                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo">
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
                         пом. XLVIII, к. 5–8
                     </div>
-                                        <div class="second-row__search-wrapper">
+                    <div class="second-row__search-wrapper">
                         <input type="text" id="search" class="second-row__search" placeholder="Крем для лица">
                         <div class="modal-search">
                             <span class="modal-search__title">
@@ -309,8 +304,10 @@
                                 Если вы ранее уже
                                 регистрировались на сайте
                             </span>
-                            <input type="text" name="email-or-phone" id="email-or-phone" class="log-in__input" placeholder="Email или телефон" autocomplete="off">
-                            <input type="password" name="password" id="password" class="log-in__input log-in__input--password" placeholder="Пароль" value="abcdefg">
+                            <input type="text" name="email-or-phone" id="email-or-phone" class="log-in__input"
+                                placeholder="Email или телефон" autocomplete="off">
+                            <input type="password" name="password" id="password"
+                                class="log-in__input log-in__input--password" placeholder="Пароль" value="abcdefg">
                             <button type="submit" class="log-in__btn basket__buy">Войти</button>
                             <button type="button" class="log-in__password-reset">Забыли пароль?</button>
                         </form>
@@ -319,27 +316,33 @@
                                 Если вы впервые на сайте
                                 пройдите регистрацию
                             </span>
-                            <input type="tel" name="phone" id="phone" class="log-in__input" placeholder="Ваш телефон" autocomplete="off">
-                            <input type="text" name="name" id="name" class="log-in__input" placeholder="Ваше имя" autocomplete="off">
+                            <input type="tel" name="phone" id="phone" class="log-in__input" placeholder="Ваш телефон"
+                                autocomplete="off">
+                            <input type="text" name="name" id="name" class="log-in__input" placeholder="Ваше имя"
+                                autocomplete="off">
                             <div class="log-in__radio-wrapper">
                                 <label>
-                                    <input type="radio" name="purchase" value="retail" id="purchase-retail" class="visually-hidden" checked>
+                                    <input type="radio" name="purchase" value="retail" id="purchase-retail"
+                                        class="visually-hidden" checked>
                                     <span class="log-in__radio"></span>
                                     <span class="log-in__text">Розница</span>
                                 </label>
                                 <label>
-                                    <input type="radio" name="purchase" value="wholesale" id="purchase-wholesale" class="visually-hidden">
+                                    <input type="radio" name="purchase" value="wholesale" id="purchase-wholesale"
+                                        class="visually-hidden">
                                     <span class="log-in__radio"></span>
                                     <span class="log-in__text">Опт</span>
                                 </label>
                             </div>
                             <button type="submit" class="log-in__btn basket__buy">Зарегистрироваться</button>
                             <label class="main-banner__checkbox-wrapper log-in__checkbox-wrapper">
-                                <input type="checkbox" class="main-banner__checkbox visually-hidden" name="agreement" checked="checked">
-                                 <span class="main-banner__checkbox__mark"></span>
-                                 <span class="main-banner__checkbox__text">
+                                <input type="checkbox" class="main-banner__checkbox visually-hidden" name="agreement"
+                                    checked="checked">
+                                <span class="main-banner__checkbox__mark"></span>
+                                <span class="main-banner__checkbox__text">
                                     Я согласен с
-                                    <a href="#"> условиями предоставления услуг и обработкой моих персональных данных </a>
+                                    <a href="#"> условиями предоставления услуг и обработкой моих персональных данных
+                                    </a>
                                     при нажатии "Зарегистрироваться"
                                 </span>
                             </label>
@@ -347,8 +350,10 @@
                     </div>
                     <div class="log-in__decorative">
                         <picture>
-                            <source srcset="./assets/img/personal-area/log-in.webp" alt="Декоративное изображение" aria-hidden="true" width="478" height="472" media="(min-width: 744px)">
-                            <img src="./assets/img/personal-area/log-in-mob.webp" alt="Декоративное изображение" aria-hidden="true" width="240" height="237">
+                            <source srcset="./assets/img/personal-area/log-in.webp" width="478"
+                                height="472" media="(min-width: 744px)">
+                            <img src="./assets/img/personal-area/log-in-mob.webp" alt="Декоративное изображение"
+                                aria-hidden="true" width="240" height="237">
                         </picture>
                     </div>
                 </div>
@@ -376,7 +381,7 @@
                                     d="M19.5 20C21.982 20 24 17.98 24 15.5V12C24 5.382 18.618 0 12 0C5.382 0 0 5.382 0 12C0 18.618 5.382 24 12 24C12.828 24 13.5 23.328 13.5 22.5C13.5 21.672 12.828 21 12 21C7.038 21 3 16.962 3 12C3 7.03799 7.038 3 12 3C16.962 3 21 7.03799 21 12V15.5C21 16.326 20.328 17 19.5 17C18.672 17 18 16.326 18 15.5V12C18 8.69199 15.308 6 12 6C8.692 6 6 8.69199 6 12C6 15.308 8.692 18 12 18C13.212 18 14.336 17.632 15.28 17.014C15.906 18.748 17.552 20 19.5 20ZM11.9531 15C13.5841 15 14.9062 13.6359 14.9062 11.9531C14.9062 10.2704 13.5841 8.90625 11.9531 8.90625C10.3222 8.90625 9 10.2704 9 11.9531C9 13.6359 10.3222 15 11.9531 15Z" />
                             </g>
                             <defs>
-                                <clipPath id="clip0_3546_8953">
+                                <clipPath id="clip0_3546_8954">
                                     <rect width="24" height="24" fill="white" />
                                 </clipPath>
                             </defs>
@@ -871,7 +876,8 @@
                                 <span class="visually-hidden">Телеграм.</span>
                             </a>
                         </div>
-                        <button type="button" class="footer__application footer__application--mob">Оставить заявку</button>
+                        <button type="button" class="footer__application footer__application--mob">Оставить
+                            заявку</button>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
@@ -912,35 +918,6 @@
             content[1].style.display = 'grid';
         });
     </script>
-    <!-- <script>
-                const createModal = (triggersSelector, modalSelector, closeSelector) => {
-            document.querySelectorAll(triggersSelector).forEach(trigger => {
-                trigger.addEventListener('click', (evt) => {
-                    evt.preventDefault();
-                    document.querySelector(modalSelector).style.display = 'flex';
-                });
-            });
-
-            document.querySelector(closeSelector).addEventListener('click', () => {
-                document.querySelector(modalSelector).style.display = 'none';
-            });
-        };
-
-        createModal('.log-in__password-reset', '.modal--reset-password', '.modal--reset-password .modal__close');
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
-
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
-    </script> -->
     <div class="decorative decorative__right decorative__right--favorites"></div>
     <div class="decorative decorative__left decorative__left--favorites"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
