--- a/src/pages/making-order.html
+++ b/src/pages/making-order.html
@@ -78,7 +78,7 @@
                             </ul>
                         </div>
                     </div>
-                    <select name="city" id="city">
+                    <select name="city" id="city-select">
                         <option value="Moscow">Москва</option>
                         <option value="Saint-Petersburg">Санкт-Петербург</option>
                         <option value="Yekaterinburg">Екатеринбург</option>
@@ -115,21 +115,16 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <p class="visually-hidden">Открыть бургер меню</p>
+                        <span class="visually-hidden">Открыть бургер меню</span>
                     </button>
                     <a href="index.html" class="second-row__main-link">
-                        <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42" media="(min-width: 760px)">
-                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="149" height="24">
-                           </picture>
+                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo">
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
                         пом. XLVIII, к. 5–8
                     </div>
-                                        <div class="second-row__search-wrapper">
+                    <div class="second-row__search-wrapper">
                         <input type="text" id="search" class="second-row__search" placeholder="Крем для лица">
                         <div class="modal-search">
                             <span class="modal-search__title">
@@ -317,7 +312,7 @@
                                     <a href="#" class="making-order__city-select__option"
                                         data-value="Yekaterinburg">Екатеринбург</a>
                                     <a href="#" class="making-order__city-select__option" data-value="City1">Город1
-                                        </option>
+                                    </a>
                                 </div>
                             </div>
                             <select name="city" id="customer-city">
@@ -348,7 +343,8 @@
                                     <input type="radio" name="delivery" value="ems-courier" id="delivery-ems-courier"
                                         class="visually-hidden">
                                     <span class="making-order__radio"></span>
-                                    <span class="making-order-delivery__name">Курьером Почты России (EMS) - &nbsp;</span>
+                                    <span class="making-order-delivery__name">Курьером Почты России (EMS) -
+                                        &nbsp;</span>
                                     <span class="making-order-delivery__price">349 ₽</span>
                                 </label>
                                 <label class="making-order-delivery__item">
@@ -360,7 +356,8 @@
                             </div>
                             <div class="making-order-delivery__address">
                                 <input type="text" name="delivery-address" id="delivery-address"
-                                    value="г. Коммунар, 188321, Ленинградская область, г. Комменар, ул. Железнодорожная, д. 2" class="making-order__input">
+                                    value="г. Коммунар, 188321, Ленинградская область, г. Комменар, ул. Железнодорожная, д. 2"
+                                    class="making-order__input">
                                 <span>Укажите адрес доставки</span>
                             </div>
                         </fieldset>
@@ -368,17 +365,20 @@
                             <legend class="making-order-form__name">Оплата</legend>
                             <div class="making-order-payment__list">
                                 <label class="making-order-payment__item">
-                                    <input type="radio" name="payment" value="online" id="payment-online" class="visually-hidden">
+                                    <input type="radio" name="payment" value="online" id="payment-online"
+                                        class="visually-hidden">
                                     <span class="making-order__radio"></span>
                                     <span class="making-order-payment__name">Банковской картой онлайн</span>
                                 </label>
                                 <label class="making-order-payment__item">
-                                    <input type="radio" name="payment" value="upon-receipt" id="payment-upon-receipt" class="visually-hidden">
+                                    <input type="radio" name="payment" value="upon-receipt" id="payment-upon-receipt"
+                                        class="visually-hidden">
                                     <span class="making-order__radio"></span>
                                     <span class="making-order-payment__name">Картой при&nbsp;получении</span>
                                 </label>
                                 <label class="making-order-payment__item">
-                                    <input type="radio" name="payment" value="cash" id="payment-cash" class="visually-hidden">
+                                    <input type="radio" name="payment" value="cash" id="payment-cash"
+                                        class="visually-hidden">
                                     <span class="making-order__radio"></span>
                                     <span class="making-order-payment__name">Наличными</span>
                                 </label>
@@ -387,7 +387,7 @@
                         <fieldset class="making-order__comment">
                             <legend class="making-order-form__name">Комментарии</legend>
                             <textarea name="making-order-comment" id="making-order-comment"
-                                value="Расскажите о пожеланиях к заказу или как улучшить работу сайта" placeholder="Расскажите о пожеланиях к заказу или как улучшить работу сайта"></textarea>
+                                placeholder="Расскажите о пожеланиях к заказу или как улучшить работу сайта"></textarea>
                         </fieldset>
                         <div class="making-order__tablet">
                             <div class="making-order__price-wrapper">
@@ -427,9 +427,9 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                                <span class="products__count products__count--digit">
-                                    1 шт.
-                                </span>
+                            <span class="products__count products__count--digit">
+                                1 шт.
+                            </span>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
                                     1 939 ₽
@@ -443,9 +443,9 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                                <span class="products__count products__count--digit">
-                                    1 шт.
-                                </span>
+                            <span class="products__count products__count--digit">
+                                1 шт.
+                            </span>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
                                     1 939 ₽
@@ -459,9 +459,9 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                                <span class="products__count products__count--digit">
-                                    1 шт.
-                                </span>
+                            <span class="products__count products__count--digit">
+                                1 шт.
+                            </span>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
                                     1 939 ₽
@@ -475,9 +475,9 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                                <span class="products__count products__count--digit">
-                                    1 шт.
-                                </span>
+                            <span class="products__count products__count--digit">
+                                1 шт.
+                            </span>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
                                     1 939 ₽
@@ -511,7 +511,7 @@
                                     d="M19.5 20C21.982 20 24 17.98 24 15.5V12C24 5.382 18.618 0 12 0C5.382 0 0 5.382 0 12C0 18.618 5.382 24 12 24C12.828 24 13.5 23.328 13.5 22.5C13.5 21.672 12.828 21 12 21C7.038 21 3 16.962 3 12C3 7.03799 7.038 3 12 3C16.962 3 21 7.03799 21 12V15.5C21 16.326 20.328 17 19.5 17C18.672 17 18 16.326 18 15.5V12C18 8.69199 15.308 6 12 6C8.692 6 6 8.69199 6 12C6 15.308 8.692 18 12 18C13.212 18 14.336 17.632 15.28 17.014C15.906 18.748 17.552 20 19.5 20ZM11.9531 15C13.5841 15 14.9062 13.6359 14.9062 11.9531C14.9062 10.2704 13.5841 8.90625 11.9531 8.90625C10.3222 8.90625 9 10.2704 9 11.9531C9 13.6359 10.3222 15 11.9531 15Z" />
                             </g>
                             <defs>
-                                <clipPath id="clip0_3546_8953">
+                                <clipPath id="clip0_3546_8954">
                                     <rect width="24" height="24" fill="white" />
                                 </clipPath>
                             </defs>
@@ -1006,7 +1006,8 @@
                                 <span class="visually-hidden">Телеграм.</span>
                             </a>
                         </div>
-                        <button type="button" class="footer__application footer__application--mob">Оставить заявку</button>
+                        <button type="button" class="footer__application footer__application--mob">Оставить
+                            заявку</button>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
@@ -1019,21 +1020,6 @@
             </div>
         </footer>
     </div>
-    <!-- <script>
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
-
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
-    </script> -->
     <div class="decorative decorative__right decorative__right--making-order"></div>
     <div class="decorative decorative__left decorative__left--making-order"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
