--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -78,7 +78,7 @@
                             </ul>
                         </div>
                     </div>
-                    <select name="city" id="city">
+                    <select name="city" id="city-select">
                         <option value="Moscow">Москва</option>
                         <option value="Saint-Petersburg">Санкт-Петербург</option>
                         <option value="Yekaterinburg">Екатеринбург</option>
@@ -115,15 +115,10 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <p class="visually-hidden">Открыть бургер меню</p>
+                        <span class="visually-hidden">Открыть бургер меню</span>
                     </button>
                     <a href="index.html" class="second-row__main-link">
-                        <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
-                                class="main-link__logo" width="261" height="42" media="(min-width: 760px)">
-                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                                width="149" height="24">
-                        </picture>
+                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo">
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -296,8 +291,8 @@
 
             <div class="products__tablet">
                 <div class="products__tablet-wrapper">
-                    <h1 class="products__name">БИО крем для рук освежающий с лимонной мятой Alpine Organics 50
-                        мл</h1>
+                    <span class="products__name">БИО крем для рук освежающий с лимонной мятой Alpine Organics 50
+                        мл</span>
                     <div class="products__tablet-text">
                         <span class="products__code">
                             Код товара: <span>25122383</span>
@@ -340,8 +335,8 @@
                 </div>
                 <div class="products__product">
                     <div class="products__mob">
-                        <h1 class="products__name">БИО крем для рук освежающий с лимонной мятой Alpine Organics 50
-                            мл</h1>
+                        <span class="products__name">БИО крем для рук освежающий с лимонной мятой Alpine Organics 50
+                            мл</span>
                         <span class="products__code">
                             Код товара: <span>25122383</span>
                         </span>
@@ -362,7 +357,7 @@
                         </button>
                         <div class="main-categories__card__slider products__card">
                             <picture>
-                                <source srcset="./assets/img/card.webp" alt="Товар." class="card__slider__img"
+                                <source srcset="./assets/img/card.webp" class="card__slider__img"
                                     width="160" height="363" media="(min-width: 744px)">
                                 <img src="./assets/img/филлеры.webp" alt="Товар." class="main-catalog__img" width="112"
                                     height="255">
@@ -495,6 +490,7 @@
 
             <!-- полная информация о товаре -->
             <section class="products__full-info">
+                <h2 class="visually-hidden">Полная информация о товаре</h2>
                 <div class="main__tabs main__tabs--products">
                     <ul class="main__tabs__list">
                         <li class="main__tabs__item main__tabs__item--active">Описание</li>
@@ -515,17 +511,17 @@
                         </span>
                         <div class="products-full-info__imgs">
                             <picture>
-                                <source srcset="./assets/img/product/product.webp" alt="Фото товара."
+                                <source srcset="./assets/img/product/product.webp"
                                     class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
-                                <source srcset="./assets/img/product/product-tablet.webp" alt="Фото товара."
+                                <source srcset="./assets/img/product/product-tablet.webp"
                                     class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
                                     class="products-full-info-img products-full-info-img--mob" width="344" height="230">
                             </picture>
                             <picture>
-                                <source srcset="./assets/img/product/product.webp" alt="Фото товара."
+                                <source srcset="./assets/img/product/product.webp"
                                     class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
-                                <source srcset="./assets/img/product/product-tablet.webp" alt="Фото товара."
+                                <source srcset="./assets/img/product/product-tablet.webp"
                                     class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
                                     class="products-full-info-img" width="344" height="230">
@@ -1004,7 +1000,7 @@
                                     d="M19.5 20C21.982 20 24 17.98 24 15.5V12C24 5.382 18.618 0 12 0C5.382 0 0 5.382 0 12C0 18.618 5.382 24 12 24C12.828 24 13.5 23.328 13.5 22.5C13.5 21.672 12.828 21 12 21C7.038 21 3 16.962 3 12C3 7.03799 7.038 3 12 3C16.962 3 21 7.03799 21 12V15.5C21 16.326 20.328 17 19.5 17C18.672 17 18 16.326 18 15.5V12C18 8.69199 15.308 6 12 6C8.692 6 6 8.69199 6 12C6 15.308 8.692 18 12 18C13.212 18 14.336 17.632 15.28 17.014C15.906 18.748 17.552 20 19.5 20ZM11.9531 15C13.5841 15 14.9062 13.6359 14.9062 11.9531C14.9062 10.2704 13.5841 8.90625 11.9531 8.90625C10.3222 8.90625 9 10.2704 9 11.9531C9 13.6359 10.3222 15 11.9531 15Z" />
                             </g>
                             <defs>
-                                <clipPath id="clip0_3546_8953">
+                                <clipPath id="clip0_3546_8954">
                                     <rect width="24" height="24" fill="white" />
                                 </clipPath>
                             </defs>
@@ -1513,21 +1509,6 @@
             </div>
         </footer>
     </div>
-    <!-- <script>
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
-
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
-    </script> -->
     <div class="decorative decorative__right decorative__right--main-top"></div>
     <div class="decorative decorative__left decorative__left--main-top"></div>
     <div class="decorative decorative__right decorative__right--product"></div>
