Заканчивает верстку сайта

--- a/src/pages/article.html
+++ b/src/pages/article.html
@@ -366,7 +366,7 @@
                                     <button class="slider__btn slider__btn--prev slider__btn--unactive">
                                         <span class="visually-hidden">Предыдущий слайд</span>
                                     </button>
-                                    <a href="reviews.html" class="main-reviews__show-all">Все статьи</a>
+                                    <a href="blog.html" class="main-reviews__show-all">Все статьи</a>
                                     <button class="slider__btn slider__btn--next">
                                         <span class="visually-hidden">Следующий слайд</span>
                                     </button>
@@ -674,6 +674,14 @@
                         </div>
                     </li>
                 </ul>
+                <div class="main-reviews__btns">
+                    <button type="button" class="main-slider__btn main-slider__btn--prev">
+                        <span class="visually-hidden">Предыдущий слайд.</span>
+                    </button>
+                    <button type="button" class="main-slider__btn main-slider__btn--next">
+                        <span class="visually-hidden">Следующий слайд.</span>
+                    </button>
+                </div>
             </section>
 
         </main>
