--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -406,7 +406,7 @@
                             <div class="main-categories__card__price products__price">
                                 <span class="main-categories__card__price--new">1 939 ₽</span>
                                 <span class="main-categories__card__price--old">2 093 ₽</span>
-                                <span class="products__sale">50%</span>
+                                <span class="products__sale">-50%</span>
                             </div>
                         </div>
                         <div class="products__row">
@@ -512,7 +512,7 @@
                         <div class="products-full-info__imgs">
                             <picture>
                                 <source srcset="./assets/img/product/product.webp"
-                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
+                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1700px)">
                                 <source srcset="./assets/img/product/product-tablet.webp"
                                     class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
@@ -520,7 +520,7 @@
                             </picture>
                             <picture>
                                 <source srcset="./assets/img/product/product.webp"
-                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
+                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1700px)">
                                 <source srcset="./assets/img/product/product-tablet.webp"
                                     class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
@@ -883,6 +883,14 @@
                         </button>
                     </li>
                 </ol>
+                <div class="main-reviews__btns">
+                    <button type="button" class="main-slider__btn main-slider__btn--prev">
+                        <span class="visually-hidden">Предыдущий слайд.</span>
+                    </button>
+                    <button type="button" class="main-slider__btn main-slider__btn--next">
+                        <span class="visually-hidden">Следующий слайд.</span>
+                    </button>
+                </div>
                 <a href="reviews.html" class="main-reviews__show-all">Все отзывы</a>
             </section>
 
