--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -369,27 +369,29 @@
             </div>
 
             <!-- Баннер с акцией на вебинар -->
-            <section class="webinar-action">
-                <div class="webinar-action__wrapper">
-                    <div class="webinar-action__sale">
-                        <span class="webinar-action__sale-size">40%</span>
-                        <span class="webinar-action__sale-duration">28 марта — 29 октября</span>
+            <div class="webinar-action-tablet">
+                <section class="webinar-action">
+                    <div class="webinar-action__wrapper">
+                        <div class="webinar-action__sale">
+                            <span class="webinar-action__sale-size">40%</span>
+                            <span class="webinar-action__sale-duration">28 марта — 29 октября</span>
+                        </div>
+                        <div class="webinar-action__info">
+                            <h2 class="webinar-action__title">
+                                Пока сходит снег
+                            </h2>
+                            <span class="webinar-action__descr">
+                                Скидка уже включена в стоимость.
+                                Оплатите до 23 марта, чтобы скидка не сгорела.
+                            </span>
+                        </div>
+                        <a href="#" class="webinar-action__link footer__application">Условия акции</a>
                     </div>
-                    <div class="webinar-action__info">
-                        <h2 class="webinar-action__title">
-                            Пока сходит снег
-                        </h2>
-                        <span class="webinar-action__descr">
-                            Скидка уже включена в стоимость.
-                            Оплатите до 23 марта, чтобы скидка не сгорела.
-                        </span>
-                    </div>
-                    <a href="#" class="webinar-action__link footer__application">Условия акции</a>
-                </div>
-            </section>
+                </section>
+            </div>
 
             <!-- формат акции -->
-            <section class="webinar-action__format">
+            <section class="webinar-action__format webinar-action__format--uppercase">
                 <h2 class="section__title section__title--smaller">Формат акции</h2>
                 <ul class="main-news__list main-news__list--blog">
                     <li class="main-news__item">
